# a11ywatch

./: .codeclimate.yml  .dockerignore  .env.example  .env.example.txt  .gitignore  .gitmodules  .prettierignore  .tfvars  CONTRIBUTING.md  DEPLOYMENT.md  README.es.md  README.ja.md  README.md  action.yml  backend.tf  bootstrap-envs.sh  bootstrap.sh  codecov.yml  deploy.sh  dev.m1.yml  dev.yml  development-ui.yml  development.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  environment-variables.md  load-env.sh  main.tf  provider.tf  task-def.json
cli/: Cargo.toml  LICENSE  README.md  build.rs  docker-compose.yml
cli/proto/: apicore.proto
cli/src/: args.rs  main.rs
cli/src/builders/: temp.rs
cli/src/commands/: build.rs  build_machine.rs  mod.rs  remote_deploy.rs  run_machine.rs  start.rs  stop.rs
cli/src/commands/api/: grpc.rs  mod.rs  rest.rs
cli/src/formatters/: body.rs  mod.rs
cli/src/fs/: code_fix.rs  install.rs  mod.rs  temp.rs
cli/src/generators/: README.md  compose.rs  mod.rs
cli/src/launchers/: docker.rs  mod.rs  terraform.rs
cli/src/options/: args.rs  mod.rs  sub_command.rs
cli/src/rpc/: client.rs  mod.rs
cli/src/runtime/: docker.rs  mod.rs  terraform.rs
cli/src/shapes/: mod.rs  website.rs
cli/src/utils/: csv.rs  github.rs  issue.rs  issue_info.rs  mod.rs  website.rs
clients/: .gitignore  Cargo.toml  README.md  build.rs
clients/libs/csharp-netcore_api_client/: README.md
clients/libs/csharp-netcore_api_client/docs/: Analytics.md  AuthInput.md  CollectionApi.md  CrawlInput.md  CrawlWebsite200Response.md  GenericInput.md  GetAnalytics200Response.md  GetIssues200Response.md  GetPages200Response.md  GetWebsiteByDomain200Response.md  GetWebsites200Response.md  History.md  Issues.md  IssuesInfo.md  PageIssue.md  PageLoadTime.md  Pages.md  Report.md  ReportsApi.md  ScanWebsite200Response.md  UserApi.md  Users.md  WebsiteInput.md  Websites.md  WebsitesApi.md  WebsitesInsight.md
clients/libs/csharp_api_client/: README.md
clients/libs/csharp_api_client/docs/: Analytics.md  AuthInput.md  CollectionApi.md  CrawlInput.md  CrawlWebsite200Response.md  GenericInput.md  GetAnalytics200Response.md  GetIssues200Response.md  GetPages200Response.md  GetWebsiteByDomain200Response.md  GetWebsites200Response.md  History.md  Issues.md  IssuesInfo.md  PageIssue.md  PageLoadTime.md  Pages.md  Report.md  ReportsApi.md  ScanWebsite200Response.md  UserApi.md  Users.md  WebsiteInput.md  Websites.md  WebsitesApi.md  WebsitesInsight.md
clients/libs/elixir_api_client/: README.md
clients/libs/go_api_client/: README.md
clients/libs/go_api_client/docs/: Analytics.md  AuthInput.md  CollectionApi.md  CrawlInput.md  CrawlWebsite200Response.md  GenericInput.md  GetAnalytics200Response.md  GetIssues200Response.md  GetPages200Response.md  GetWebsiteByDomain200Response.md  GetWebsites200Response.md  History.md  Issues.md  IssuesInfo.md  PageIssue.md  PageLoadTime.md  Pages.md  Report.md  ReportsApi.md  ScanWebsite200Response.md  UserApi.md  Users.md  WebsiteInput.md  Websites.md  WebsitesApi.md  WebsitesInsight.md
clients/libs/java_api_client/: README.md
clients/libs/java_api_client/docs/: Analytics.md  AuthInput.md  CollectionApi.md  CrawlInput.md  CrawlWebsite200Response.md  GenericInput.md  GetAnalytics200Response.md  GetIssues200Response.md  GetPages200Response.md  GetWebsiteByDomain200Response.md  GetWebsites200Response.md  History.md  Issues.md  IssuesInfo.md  PageIssue.md  PageLoadTime.md  Pages.md  Report.md  ReportsApi.md  ScanWebsite200Response.md  UserApi.md  Users.md  WebsiteInput.md  Websites.md  WebsitesApi.md  WebsitesInsight.md
clients/libs/javascript_api_client/: README.md
clients/libs/javascript_api_client/docs/: Analytics.md  AuthInput.md  CollectionApi.md  CrawlInput.md  CrawlWebsite200Response.md  GenericInput.md  GetAnalytics200Response.md  GetIssues200Response.md  GetPages200Response.md  GetWebsiteByDomain200Response.md  GetWebsites200Response.md  History.md  Issues.md  IssuesInfo.md  PageIssue.md  PageLoadTime.md  Pages.md  Report.md  ReportsApi.md  ScanWebsite200Response.md  UserApi.md  Users.md  WebsiteInput.md  Websites.md  WebsitesApi.md  WebsitesInsight.md
clients/libs/php_api_client/: README.md
clients/libs/python_api_client/: README.md
clients/libs/python_api_client/docs/: Analytics.md  AuthInput.md  CollectionApi.md  CrawlInput.md  CrawlWebsite200Response.md  GenericInput.md  GetAnalytics200Response.md  GetIssues200Response.md  GetPages200Response.md  GetWebsiteByDomain200Response.md  History.md  (+15 more)
clients/libs/ruby_api_client/: README.md
clients/libs/rust_api_client/: README.md
clients/libs/swift5_api_client/: README.md
clients/src/: main.rs
clients/src/api_client_generator/: lib.rs  mod.rs
clients/src/proto/: README.md  apicore.proto  cdn.proto  package.json  pagemind.proto  website.proto
clients/src/schema/: README.md  api.json  crawler.proto  mav.proto  package.json  pagemind.proto  rest.json  website.proto
(+1080 files in other folders)
