[package]
name = "a11ywatch_cli"
version = "0.7.10"
authors = ["j-mendez <jeff@a11ywatch.com>"]
description = "A11yWatch accessibility CLI."
repository = "https://github.com/a11ywatch/a11ywatch"
readme = "README.md"
keywords = ["a11ywatch", "accessibility", "web", "website_improvement"]
categories = ["accessibility", "command-line-utilities", "development-tools::build-utils"]
license = "MIT"
documentation = "https://docs.rs/a11ywatch_cli"
include = ["src/*", "LICENSE", "README.md"]
edition = "2018"

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
ureq = { version = "2.5.0", features = ["json", "charset", "brotli"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json =  { version = "1.0.82" }
dirs = "4.0"
htr = "0.5.26"
tonic = { version = "0.7.2", optional = true }
lazy_static = { version = "1.4.0", optional = true }
prost = { version = "0.10.0", optional = true }
prost-types = { version = "0.10.0", optional = true }
tokio = { version = "^1.20.0", features = [ "rt", "net", "macros" ], optional = true }
env_logger = "0.9.0"
log = "0.4.17"

[build-dependencies]
tonic-build = { version = "0.7", optional = true }

[[bin]]
name = "a11ywatch"
path = "src/main.rs"

[features]
grpc = ["dep:tonic-build", "dep:prost", "dep:lazy_static", "dep:tonic", "dep:prost-types", "dep:tokio"]
