[package]
name = "a11ywatch_cli"
version = "0.8.2"
authors = ["j-mendez <jeff@a11ywatch.com>"]
description = "A11yWatch accessibility CLI."
repository = "https://github.com/a11ywatch/a11ywatch"
readme = "README.md"
keywords = ["a11ywatch", "accessibility", "web", "website_improvement"]
categories = ["accessibility", "command-line-utilities", "development-tools::build-utils"]
license = "MIT"
documentation = "https://docs.rs/a11ywatch_cli"
include = ["src/*", "build.rs", "LICENSE", "README.md"]
edition = "2018"

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json =  { version = "1.0.85" }
dirs = "4.0"
htr = "0.5.26"
tonic = { version = "0.7.2" }
lazy_static = { version = "1.4.0" }
prost = { version = "0.10.0" }
prost-types = { version = "0.10.0" }
tokio = { version = "^1.20.0", features = [ "rt", "rt-multi-thread", "net", "macros" ] }
env_logger = "0.9.0"
log = "0.4.17"
reqwest = { version = "^0.11.11", features = ["json", "brotli", "blocking"] }

[build-dependencies]
tonic-build = { version = "0.7" }

[[bin]]
name = "a11ywatch"
path = "src/main.rs"